package types;

import java.math.BigDecimal;

/**
 *
 */
public class Price {
    private BigDecimal price;

    public Price() { }
}
