package types;

public interface Serviceable {

    boolean isServiced();

}
