@startuml
class CustomerDao {
}
class Bedding {
- beddingType : BeddingType
- beddingSize : BeddingSize
- isServiced : boolean
- material : Material
+ getBeddingType() : BeddingType
+ getBeddingSize() : BeddingSize
+ getMaterial() : Material
+ isServiced() : boolean
+ toString() : String
}
class Invoice {
- invoiceId : String
- rackId : String
- price : Price
- itemsToService : List<Serviceable>
- dropDateTime : ZonedDateTime
- pickupDateTime : ZonedDateTime
- completedDateTime : ZonedDateTime
}
class InvoiceHistory {
- customerId : String
- invoices : List<Invoice>
}
interface Serviceable {
~ isServiced() : boolean
}
interface Dao<T> {
~ getAll() : List<T>
~ get() : T
~ save(T) : void
~ update(T,String[]) : void
~ delete(T) : void
}
class InvoiceDao {
}
class Garment {
- garmentType : GarmentType
- material : Material
- isServiced : boolean
+ isServiced() : boolean
}
class App {
}
class ServiceManager {
+ {static} void main(String[])
}
class Price {
- price : BigDecimal
}
class Customer {
- firstName : String
- lastName : String
- phoneNumber : String
- address : String
- joinDate : ZonedDateTime
}

Serviceable <|.. Bedding
Serviceable <|.. Garment
Dao <|.. CustomerDao
Dao <|.. InvoiceDao
Dao <|.. InvoiceHistoryDao

Customer -- InvoiceHistory

Invoice *-- Serviceable
Invoice *-- Price
InvoiceHistory *-- Invoice

ServiceManager <-- App
@enduml